Changing palette; creating singup page; changing homepage to grid; adding logo

--- a/www/aultimapagina/frontend/src/pages/Home/styles.css
+++ b/www/aultimapagina/frontend/src/pages/Home/styles.css
@@ -1,8 +1,7 @@
-.repo-container div ul li {
-    padding: 24px;
-    position: relative;
-    width:444px;
-    max-width:444px;
-    height:176.78px;
-    max-height:176.78px;
-}
+/*div#body-container {*/
+/*    @apply ;*/
+/*}*/
+
+/*div#post-container {*/
+/*    @apply col-span-2;*/
+/*}*/
