prettify some frontend issues; create login/logout service

--- a/www/aultimapagina/frontend/src/components/Header/styles.css
+++ b/www/aultimapagina/frontend/src/components/Header/styles.css
@@ -9,3 +9,7 @@ div#header {
 div#sign-buttons div {
     @apply py-2 w-28 text-white text-center font-bold cursor-pointer rounded-lg mr-2
 }
+
+div#logged-buttons div {
+    @apply py-2 w-28 text-white text-center font-bold cursor-pointer rounded-lg mr-2
+}
